Crash (regression) when rendering a flex rig character #38969

Closed
opened 2014-03-05 14:35:31 +01:00 by Inês Almeida · 13 comments
Member

System Information
Linux 64bits

Blender Version
Broken: buildbot 905dda8 and master
Worked: official 2.69

Exact steps for others to reproduce the error
This is not a minimal file :-(
The file to open: testcrash.blend with a cookie flex character linked from characterLib/normalGuy.blend
Open the file >> Properties Window >> Render >> 'Render' or 'Animation' button . Press Esc.
If it does not crash, Press the button again and Esc.
It does not crash always, but very often. More than half the times it is crashing at first attempt, and I only managed to repeat this 4 times in a row without crashing.
About the files: normalGuy.blend was made by opening cookieFlexRig-1.2.1, renaming the normal and low res group to 'normalGuy', saving. The testcrash.blend links this in, else I just deleted the default cube.

Short description of error
This is a segfault. My debug compilation is failing the same assert 222 times:

BLI_assert failed: /home/stitch/workspace/blenderStuff/blender_source/blender-source/source/blender/blenkernel/intern/DerivedMesh.c:657, DM_get_vert_data(), at 'index >= 0 && index < dm->getNumVerts(dm)'

and the stack trace is:

0 render_image_update_pass_and_layer render_internal.c 499 0x1b64f1d
1 image_rect_update render_internal.c 537 0x1b6504f
2 do_render_thread pipeline.c 980 0x1c48cd3
3 tslot_thread_start threads.c 251 0x2218724
4 start_thread /lib64/libpthread.so.0 0x7ffff6594eae
5 clone /lib64/libc.so.6 0x7ffff1189fed

This is the offending line:

if (rr->renlay) {

rr is 0x0

**System Information** Linux 64bits **Blender Version** Broken: buildbot 905dda8 and master Worked: official 2.69 **Exact steps for others to reproduce the error** This is not a minimal file :-( The file to open: [testcrash.blend](https://archive.blender.org/developer/F80005/testcrash.blend) with a cookie flex character linked from characterLib/[normalGuy.blend ](http://www.pasteall.org/blend/27309) Open the file >> Properties Window >> Render >> 'Render' or 'Animation' button . Press Esc. If it does not crash, Press the button again and Esc. It does not crash always, but very often. More than half the times it is crashing at first attempt, and I only managed to repeat this 4 times in a row without crashing. About the files: *normalGuy.blend* was made by opening cookieFlexRig-1.2.1, renaming the normal and low res group to 'normalGuy', saving. The *testcrash.blend* links this in, else I just deleted the default cube. **Short description of error** This is a segfault. My debug compilation is failing the same assert 222 times: ``` BLI_assert failed: /home/stitch/workspace/blenderStuff/blender_source/blender-source/source/blender/blenkernel/intern/DerivedMesh.c:657, DM_get_vert_data(), at 'index >= 0 && index < dm->getNumVerts(dm)' ``` and the stack trace is: | 0 | render_image_update_pass_and_layer render_internal.c 499 | 0x1b64f1d | -- | -- | -- | | 1 | image_rect_update render_internal.c 537 | 0x1b6504f | 2 | do_render_thread pipeline.c 980 | 0x1c48cd3 | 3 | tslot_thread_start threads.c 251 | 0x2218724 | 4 | start_thread /lib64/libpthread.so.0 | 0x7ffff6594eae | 5 | clone /lib64/libc.so.6 | 0x7ffff1189fed | This is the offending line: ``` if (rr->renlay) { ``` rr is 0x0
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @brita

Added subscriber: @brita

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Bastien Montagne self-assigned this 2014-03-05 14:39:56 +01:00

The file you uploaded is nearly empty, looks like it depends on lib files we do not have!

The file you uploaded is nearly empty, looks like it depends on lib files we do not have!

Sorry, my bad, did not see the second link to the lib file… :/

Sorry, my bad, did not see the second link to the lib file… :/
Bastien Montagne removed their assignment 2014-03-05 15:24:33 +01:00
Lukas Tönne was assigned by Bastien Montagne 2014-03-05 15:24:33 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Definitively can’t reproduce here… Assigning to Lukas, since he does.

Definitively can’t reproduce here… Assigning to Lukas, since he does.
Lukas Tönne removed their assignment 2014-03-05 16:08:14 +01:00
Sergey Sharybin was assigned by Lukas Tönne 2014-03-05 16:08:14 +01:00
Member

Added subscribers: @Sergey, @LukasTonne

Added subscribers: @Sergey, @LukasTonne
Member

Passing on to @Sergey, since it seems to be related to c5d7ea091f.

@Sergey: I'm not quite sure if RenderResult is allowed to be NULL here (i guess not), my suspicion is that due to too early lock release the pa->result can get freed and NULLed right before display_update is called in another thread:
https://developer.blender.org/diffusion/B/browse/master/source/blender/render/intern/source/pipeline.c;3aedb3aed7c8c2a268db2fab6e69007fa65f4950$979

It then crashes here:
https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/render/render_internal.c;3aedb3aed7c8c2a268db2fab6e69007fa65f4950$499

Passing on to @Sergey, since it seems to be related to c5d7ea091f. @Sergey: I'm not quite sure if RenderResult is allowed to be NULL here (i guess not), my suspicion is that due to too early lock release the pa->result can get freed and NULLed right before display_update is called in another thread: https://developer.blender.org/diffusion/B/browse/master/source/blender/render/intern/source/pipeline.c;3aedb3aed7c8c2a268db2fab6e69007fa65f4950$979 It then crashes here: https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/render/render_internal.c;3aedb3aed7c8c2a268db2fab6e69007fa65f4950$499

This issue was referenced by blender/blender-addons-contrib@8e7ec3652e

This issue was referenced by blender/blender-addons-contrib@8e7ec3652e94f75d6ffe134dcac7fc4cc5c66f89

This issue was referenced by 8e7ec3652e

This issue was referenced by 8e7ec3652e94f75d6ffe134dcac7fc4cc5c66f89
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 8e7ec3652e.

Closed by commit 8e7ec3652e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38969
No description provided.