Fix T38969: RenderResult in RenderPart can be NULL if multithreaded renders are cancelled early.